--- a/src/GUI/configView.fxml
+++ b/src/GUI/configView.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -14,25 +16,20 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="590.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ctrl.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ctrl.Controller">
    <children>
-      <GridPane layoutX="1.0" layoutY="-2.0" prefWidth="250.0">
+      <GridPane layoutX="1.0" layoutY="-2.0" prefWidth="500.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -54,12 +51,12 @@
                </toggleGroup>
             </RadioButton>
             <RadioButton fx:id="rbWaterWorld" mnemonicParsing="false" text="WaterWorld" toggleGroup="$gameSelection" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label fx:id="lblGridSize" disable="true" text="Grid size: (Default: 8x8)" GridPane.columnSpan="2" GridPane.rowIndex="15">
+            <Label fx:id="lblGridSize" disable="true" text="Grid size: (Default: 8x8)" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="6">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" spacing="10.0" GridPane.rowIndex="16">
+            <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" spacing="10.0" GridPane.columnIndex="3" GridPane.rowIndex="7">
                <children>
                   <TextField fx:id="tfRows" alignment="CENTER" disable="true" promptText="row" />
                   <Label fx:id="lblCross" disable="true" maxHeight="1.7976931348623157E308" text="X" textAlignment="CENTER" />
@@ -80,23 +77,22 @@
                </toggleGroup>
             </RadioButton>
             <RadioButton fx:id="rbStep" mnemonicParsing="false" text="Step-by-step" toggleGroup="$modeSelection" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <Label fx:id="lblNbrPenguins" disable="true" text="Number of penguins: (Default: 5)" GridPane.columnSpan="2" GridPane.rowIndex="12">
+            <Label fx:id="lblNbrPenguins" disable="true" text="Number of penguins: (Default: 5)" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="3">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <TextField fx:id="tfNbrPenguins" disable="true" maxWidth="45.0" promptText="1...20" GridPane.rowIndex="13" />
-            <Label fx:id="lblMovesPerTurn" text="Moves per turn:" GridPane.rowIndex="9">
+            <Label fx:id="lblMovesPerTurn" text="Moves per turn:" GridPane.columnIndex="3">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <RadioButton fx:id="rbSingle" mnemonicParsing="false" selected="true" text="Single" GridPane.rowIndex="10">
+            <RadioButton fx:id="rbSingle" mnemonicParsing="false" selected="true" text="Single" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <toggleGroup>
                   <ToggleGroup fx:id="moveSelection" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="rbMulti" mnemonicParsing="false" text="Multi" toggleGroup="$moveSelection" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+            <RadioButton fx:id="rbMulti" mnemonicParsing="false" text="Multi" toggleGroup="$moveSelection" GridPane.columnIndex="4" GridPane.rowIndex="1" />
             <Label text="View:" GridPane.rowIndex="3">
                <font>
                   <Font name="System Bold" size="13.0" />
@@ -109,11 +105,27 @@
                   <CheckBox fx:id="cbText" mnemonicParsing="false" selected="true" text="Text" />
                </children>
             </HBox>
-            <Button mnemonicParsing="false" onAction="#startGame" text="Start game" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="18">
+            <Button mnemonicParsing="false" onAction="#startGame" text="Start game" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="10">
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
             </Button>
+            <Label text="Speed (Default: 1000ms):" GridPane.columnSpan="2" GridPane.rowIndex="9">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <TextField fx:id="tfSleep" maxWidth="85.0" promptText="200...5000ms" GridPane.rowIndex="10" />
+            <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
+               <children>
+                  <TextField fx:id="tfNbrPenguins" disable="true" maxWidth="45.0" />
+                  <ImageView fx:id="ivInfo" disable="true" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../resources/info.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </HBox>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
